Remove more unnecessary endpoints
