# openapi/magnolia-payments-api.yaml
@@ -785,99 +785,6 @@ paths:
       tags:
         - Payments
       summary: Retrieve the payment by id.
-  '/api/trust/v1/payments/{paymentId}/approve':
-    post:
-      parameters:
-        - description: Payment identifier
-          in: path
-          name: paymentId
-          required: true
-          schema:
-            format: uuid
-            type: string
-          style: simple
-        - description: The idempotency key for the endpoint
-          in: header
-          name: Idempotency-Key
-          schema:
-            format: uuid
-            type: string
-          style: simple
-      responses:
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      security:
-        - Bearer: []
-      tags:
-        - Payments
-      summary: Approve payment. Allowed only for Integration dashboard users.
-  '/api/trust/v1/payments/{paymentId}/cancel':
-    put:
-      parameters:
-        - description: Payment identifier
-          in: path
-          name: paymentId
-          required: true
-          schema:
-            format: uuid
-            type: string
-          style: simple
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PaymentResponseModel'
-          description: Success
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
-          description: Not Found
-      security:
-        - Bearer: []
-      tags:
-        - Payments
-      summary: 'Cancel payment, right now ACH payments cancelling supported only'
-  '/api/trust/v1/payments/{paymentId}/reject':
-    post:
-      parameters:
-        - description: Payment identifier
-          in: path
-          name: paymentId
-          required: true
-          schema:
-            format: uuid
-            type: string
-          style: simple
-        - description: The idempotency key for the endpoint
-          in: header
-          name: Idempotency-Key
-          schema:
-            format: uuid
-            type: string
-          style: simple
-      responses:
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      security:
-        - Bearer: []
-      tags:
-        - Payments
-      summary: Reject payment. Allowed only for Integration dashboard users.
   /api/trust/v1/sub-accounts/payments:
     post:
       parameters:
